rewritting raw optional tests; backendbindings has a global variable to save as BIND or VALUES; disabled all included query test for now